styles for slideshow nav buttons and fix image alignment

--- a/blocks/galleryimage/galleryimage.css
+++ b/blocks/galleryimage/galleryimage.css
@@ -8,6 +8,11 @@
     align-content: center;
 }
 
+.galleryimage-wrapper > .carousel .image {
+    display: flex;
+    justify-content: center;
+}
+
 .galleryimage-wrapper .carousel p {
     display: inline;
 }
@@ -17,7 +22,6 @@
     display: inline-block;
 }
 
-/*
 .slideshow-wrapper .carousel {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -28,6 +32,26 @@
     height: 100%;
     width: 100%;
 }
+
+/*
+.slide-btn {
+    right: 28px;
+    background-repeat: no-repeat;
+    background-color: rgba(21,21,23,.5);
+    border-radius: 50%;
+    width: 49px;
+    height: 49px;
+    top: calc(50% - 24.5px);
+    cursor: pointer;
+    position: absolute;
+    left: auto;
+    z-index: 10;
+    font-size: 40px;
+    opacity: 1;
+    -webkit-transition: opacity .3s linear;
+    transition: opacity .3s linear;
+}
+*/
 
 .slide-btn {
     right: 28px;
@@ -53,7 +77,16 @@
     background-position: 60% 50%;
     float: right;
     background-size: 27px;
-}*/
+}
+
+.slide-btn.slide-btn-prev {
+    background-repeat: no-repeat;
+    left: 2rem;
+    right: auto;
+    background-image: url(/blocks/galleryimage/images/prev.svg);
+    background-position: 40% 50%;
+    background-size: 27px;
+}
 
 .listicle .promo-credit {
     margin: 0;
